# deno-simple-plugin

./: .gitignore  Cargo.toml  README.md  demo.ts  justfile  mod.ts  template.json
src/: lib.rs
