[package]
name = "@pluginName@"
version = "0.1.0"
authors = ["@author_name@ <@author_email@>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_core = "0.88.0"
futures = "0.3.15"
serde = "1"
